# v4-examples

./: .gitignore  package-lock.json
rust_anchor_cpi/: Anchor.toml
rust_anchor_cpi/programs/rust_anchor_cpi/: Cargo.toml
rust_anchor_cpi/programs/rust_anchor_cpi/src/: lib.rs
rust_anchor_cpi/programs/rust_anchor_cpi/src/instructions/: approve_proposal.rs  create_multisig.rs  create_proposal.rs  create_vault_transaction.rs  mod.rs
rust_anchor_cpi/tests/: rust_anchor_cpi.ts
typescript/: .env.example  .gitignore  init.sh  main.ts  package.json  tsconfig.json
